Changed Arrays.asList to List.of and used Map.of whenever possible.