@@ -15,7 +15,7 @@ public class Day01Test {
 
     DataLoader dataLoader = new DataLoader();
     // @Matthias: I think this is Java 8 the command List.of() does not exist, yet.
-    List<Integer> testNumbers = new ArrayList<>(Arrays.asList(1721, 979, 366, 299, 675, 1456));
+    List<Integer> testNumbers = new ArrayList<>(List.of(1721, 979, 366, 299, 675, 1456));
 
     @BeforeEach
     void setup() {
